src/DisplayStyles.css
.container {
    flex:auto;
    
    text-align: center;
    justify-content: center;
    
  }
  
  .text {
    font-size: 12px;
    
  }
  .title {
    text-align: center;
    justify-content: center;
    
  }
  .list {
    text-align: center;
    justify-content: center;
    
  }
  .table {
    
    font-size: 34px;
    text-align: center;
    justify-content: center;
    
  }
.box {
    font-size: 15px;
    
    margin:10px;
    text-align: center;
    justify-content: center;
   
}
.check {
  font-size: 30px;
  margin:10px;
  width: 30px;
  height: 30px;
  
}
.con2 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.text2 {
  font-size: 24px;
  margin: 10px;
  
}

.night {
  background-color: #333;
  color: #fff;

}
.day {
  background-color: #ffffff;
  color: #333;
}

